--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "botkit-react",
+  "name": "botkit-react-workspace",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
